# osrm-local-server

./: .gitignore  README.html  README.md  distancias_a_destino_localserver.ipynb  distancias_table.ipynb  iniciar_server_osrm_docker.sh  init_server_osrm_docker.sh  main.py  pyproject.toml  requirements.txt
config/: settings.example.yaml
inputs/: .gitignore  destinations.example.yaml  test_destinations.geojson  test_destinations.yaml  test_origins.xlsx
notebooks/: .gitignore  example.ipynb
outputs/: .gitignore
src/distances/: __init__.py  __main__.py  cli.py  inputs.py  matrix.py  osrm.py  settings.py
