[project]
name = "distancias-destinos-localserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contextily>=1.6.2",
    "fiona>=1.10.1",
    "geopandas>=1.0.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.0",
]
