[project]
name = "distancias-destinos-localserver"
version = "0.1.0"
description = "Origin-destination distance matrix over a local OSRM server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contextily>=1.6.2",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.0.1",
    "ipykernel>=7.1.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.0",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.0",
]

[project.scripts]
distances = "distances.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distances"]
